--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+/app/assets/builds/*
+!/app/assets/builds/.keep
