--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -32,6 +32,7 @@ AllCops:
     - '.idea/**/*'
     - '**/.DS_Store'
     - '**/.keep'
+    - 'app/services/**/*'
 
 # Indent private/protected/public as deep as method definitions
 Layout/AccessModifierIndentation:
